# simple-embedding-server

./: .env.fastapi  .env.sample  .gitignore  Dockerfile  README.md  app.py  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
