[tool.poetry]
name = "simple embedding server"
version = "0.1.0"
description = ""
authors = ["example <example@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "^0.5.1"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
sentence-transformers = "^2.2.2"

[tool.poetry.group.dev.dependencies]
langchain = "^0.0.322"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
